--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--==== HEADER ====-->
     <header class="nav-bar">
         <div class="logo">
-            <img src="/assets/logopmm.png" alt="logo-mpe">
+            <img src="assets/logopmm.png" alt="logo-mpe">
         </div>
 
         
@@ -31,10 +31,10 @@
             </label>
     
             <ul class="menu__box">
-                <li class="icons"><img src="/assets/icons/house.svg" class="icon__menu" alt=""><a href="" class="menu__item">Home</a></li>
-                <li class="icons"><img src="/assets/icons/info-circle.svg" class="icon__menu" alt=""><a href="" class="menu__item">Sobre</a></li>
-                <li class="icons"><img src="/assets/icons/calendar-date.svg" class="icon__menu" alt=""><a href="" class="menu__item">Agenda</a></li>
-                <li class="icons"><img src="/assets/icons/telephone.svg" class="icon__menu" alt=""><a href="" class="menu__item">Contato</a></li>
+                <li class="icons"><img src="assets/icons/house.svg" class="icon__menu" alt=""><a href="" class="menu__item">Home</a></li>
+                <li class="icons"><img src="assets/icons/info-circle.svg" class="icon__menu" alt=""><a href="" class="menu__item">Sobre</a></li>
+                <li class="icons"><img src="assets/icons/calendar-date.svg" class="icon__menu" alt=""><a href="" class="menu__item">Agenda</a></li>
+                <li class="icons"><img src="assets/icons/telephone.svg" class="icon__menu" alt=""><a href="" class="menu__item">Contato</a></li>
             </ul>
         </div>
 
@@ -77,7 +77,7 @@
     <footer>
         <div class="container-msg">
             <div class="img-left">
-                <img src="/assets/msg.svg" alt="" srcset="">
+                <img src="assets/msg.svg" alt="" srcset="">
             </div>
             <div class="form-msg">
                 <h1>Fale Conosco</h1>
@@ -97,16 +97,16 @@
 
         <div class="content-footer">
             <div class="content-footer-left">
-                <img src="/assets/logopmm.png">
+                <img src="assets/logopmm.png">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nostrum blanditiis eos earum,
                     consequatur ex!</p>
             </div>
             <div class="content-footer-right">
                 <h1>ACOMPANHE</h1>
                 <div class="social-media">
-                    <a href="#"><img src="/assets/icons/icons8-instagram.svg" alt=""></a>
-                    <a href="#"><img src="/assets/icons/icons8-facebook-novo.svg" alt="" srcset=""></a>
-                    <a href="#"><img src="/assets/icons/icons8-reproduzir-youtube.svg" alt="" srcset=""></a>
+                    <a href="#"><img src="assets/icons/icons8-instagram.svg" alt=""></a>
+                    <a href="#"><img src="assets/icons/icons8-facebook-novo.svg" alt="" srcset=""></a>
+                    <a href="#"><img src="assets/icons/icons8-reproduzir-youtube.svg" alt="" srcset=""></a>
                 </div>
             </div>
         </div>
