--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
     <main class="container">
         <div class="content-left">
             <h1 class="title">Territórios <br> <span>Organizados</span></h1>
-            <p>O projeto TOP (Territorios Organizados Produtivos) se trata de uma regionalização e divisão Municipal
+            <p id="texto_top_1">O projeto TOP (Territorios Organizados Produtivos) se trata de uma regionalização e divisão Municipal
                 para que ... Clique na TOP ao lado e você será direcionado para algumas informações sobre o local. </p>
+            
+            <p id="texto_top_2">O projeto TOP (Territorios Organizados Produtivos) se trata de uma regionalização e divisão Municipal
+                    para que ... Clique na TOP a baixo e você será direcionado para algumas informações sobre o local. </p>
             <a href="/"><button class="bn632-hover bn18">Entrar</button></a>
         </div>
 
