--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <script src="https://unpkg.com/scrollreveal"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/CSSRulePlugin.min.js"></script>
+
+    <script src="https://kit.fontawesome.com/2ec1b8316c.js" crossorigin="anonymous"></script>
+
     <!--=== CSS ===-->
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
@@ -115,6 +119,8 @@
 </svg>
         </div>
     </main>
+    
+    <button class="top-btn" style="color: #2874fc; font-size: 20px;"><i class="fa-solid fa-circle-chevron-up"></i></button>
 
     <div class="lista-tops">
     <h1>LISTA DOS TERRITÓRIOS</h1>
