--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!--==== MAIN ====-->
     <main class="container">
         <div class="content-left">
-            <h1 class="title">Territórios <br> <span>Organizados</span></h1>
+            <h1 class="title">Territórios <br> <span id="territorio-span"></span></h1>
             <p id="texto_top_1">O projeto TOP (Territorios Organizados Produtivos) se trata de uma regionalização e divisão Municipal
                 para que ... Clique na TOP ao lado e você será direcionado para algumas informações sobre o local. </p>
             
