--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/2ec1b8316c.js" crossorigin="anonymous"></script>
 
     <!--=== CSS ===-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 
 </head>
@@ -24,7 +24,7 @@
     <!--==== HEADER ====-->
     <header class="nav-bar">
         <div class="logo">
-            <img src="assets/logopmm.png" alt="logo-mpe">
+            <img src="./assets/logopmm.png" alt="logo-mpe">
         </div>
 
 
@@ -35,13 +35,13 @@
             </label>
 
             <ul class="menu__box">
-                <li class="icons"><img src="assets/icons/house.svg" class="icon__menu" alt=""><a href=""
+                <li class="icons"><img src="./assets/icons/house.svg" class="icon__menu" alt=""><a href=""
                         class="menu__item">Home</a></li>
-                <li class="icons"><img src="assets/icons/info-circle.svg" class="icon__menu" alt=""><a href=""
+                <li class="icons"><img src="./assets/icons/info-circle.svg" class="icon__menu" alt=""><a href=""
                         class="menu__item">Sobre</a></li>
-                <li class="icons"><img src="assets/icons/calendar-date.svg" class="icon__menu" alt=""><a href=""
+                <li class="icons"><img src="./assets/icons/calendar-date.svg" class="icon__menu" alt=""><a href=""
                         class="menu__item">Agenda</a></li>
-                <li class="icons"><img src="assets/icons/telephone.svg" class="icon__menu" alt=""><a href=""
+                <li class="icons"><img src="./assets/icons/telephone.svg" class="icon__menu" alt=""><a href=""
                         class="menu__item">Contato</a></li>
             </ul>
         </div>
@@ -64,8 +64,8 @@
             <h1 class="title">Territórios <br> <span id="territorio-span"></span></h1>
             <p id="texto_top_1">O projeto TOP (Territorios Organizados Produtivos) se trata de uma regionalização e divisão Municipal
                 para que ... Clique na TOP ao lado e você será direcionado para algumas informações sobre o local. </p>
-            
-            <p id="texto_top_2">O projeto TOP (Territorios Organizados Produtivos) se trata de uma regionalização e divisão Municipal
+
+                <p id="texto_top_2">O projeto TOP (Territorios Organizados Produtivos) se trata de uma regionalização e divisão Municipal
                     para que ... Clique na TOP a baixo e você será direcionado para algumas informações sobre o local. </p>
             <a href="/"><button class="bn632-hover bn18">Entrar</button></a>
         </div>
@@ -77,7 +77,7 @@
     <style bx:fonts="Poppins">@import url(https://fonts.googleapis.com/css2?family=Poppins%3Aital%2Cwght%400%2C100%3B0%2C200%3B0%2C300%3B0%2C400%3B0%2C500%3B0%2C600%3B0%2C700%3B0%2C800%3B0%2C900%3B1%2C100%3B1%2C200%3B1%2C300%3B1%2C400%3B1%2C500%3B1%2C600%3B1%2C700%3B1%2C800%3B1%2C900&amp;display=swap);</style>
   </defs>
   <g>
-    <a style="" class="top" name="top-1">
+    <a style="" class="top" name="top-1" href="tops/top1.html">
       <path style=" stroke: rgb(255, 255, 255); stroke-linejoin: round; stroke-linecap: round;" d="M 388.105 66.528 L 377.203 61.386 L 365.478 43.078 L 377.409 34.644 L 384.403 26.416 L 391.808 29.09 L 394.688 33.204 L 405.591 36.084 L 410.733 40.404 L 407.648 46.163 L 404.151 50.278 L 399.831 56.655 L 388.105 66.528 Z">
         <title>1</title>
       </path>
@@ -119,12 +119,13 @@
 </svg>
         </div>
     </main>
-    
+
     <button class="top-btn" style="color: #2874fc; font-size: 20px;"><i class="fa-solid fa-circle-chevron-up"></i></button>
 
     <div class="lista-tops">
-    <h1>LISTA DOS TERRITÓRIOS</h1>
+    <h1 id="text-test"></h1>
     </div>
+
     <section class="territorios">
         <div class="top_1">
             <div class="top_1_img">
@@ -218,7 +219,7 @@
     <footer>
         <div class="container-msg">
             <div class="img-left">
-                <img src="assets/msg.svg" alt="" srcset="">
+                <img src="./assets/msg.svg" alt="" srcset="">
             </div>
             <div class="form-msg">
                 <h1>Fale Conosco</h1>
@@ -238,16 +239,16 @@
 
         <div class="content-footer">
             <div class="content-footer-left">
-                <img src="assets/logopmm.png">
+                <img src="./assets/logopmm.png">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nostrum blanditiis eos earum,
                     consequatur ex!</p>
             </div>
             <div class="content-footer-right">
                 <h1>ACOMPANHE</h1>
                 <div class="social-media">
-                    <a href="#"><img src="assets/icons/icons8-instagram.svg" alt=""></a>
-                    <a href="#"><img src="assets/icons/icons8-facebook-novo.svg" alt="" srcset=""></a>
-                    <a href="#"><img src="assets/icons/icons8-reproduzir-youtube.svg" alt="" srcset=""></a>
+                    <a href="https://www.instagram.com/prefeituramaranguape/"><img src="./assets/icons/icons8-instagram.svg" alt=""></a>
+                    <a href="#"><img src="./assets/icons/icons8-facebook-novo.svg" alt="" srcset=""></a>
+                    <a href="#"><img src="./assets/icons/icons8-reproduzir-youtube.svg" alt="" srcset=""></a>
                 </div>
             </div>
         </div>
@@ -259,7 +260,6 @@
 
 
     <!--==== JS ====-->
-    <script src="fetchSvg.js"></script>
     <script src="main.js"></script>
 </body>
 
