--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/2ec1b8316c.js" crossorigin="anonymous"></script>
 
     <!--=== CSS ===-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 
 </head>
@@ -24,7 +24,7 @@
     <!--==== HEADER ====-->
     <header class="nav-bar">
         <div class="logo">
-            <img src="./assets/logopmm.png" alt="logo-mpe">
+            <img src="assets/logopmm.png" alt="logo-mpe">
         </div>
 
 
@@ -35,13 +35,13 @@
             </label>
 
             <ul class="menu__box">
-                <li class="icons"><img src="./assets/icons/house.svg" class="icon__menu" alt=""><a href=""
+                <li class="icons"><img src="assets/icons/house.svg" class="icon__menu" alt=""><a href=""
                         class="menu__item">Home</a></li>
-                <li class="icons"><img src="./assets/icons/info-circle.svg" class="icon__menu" alt=""><a href=""
+                <li class="icons"><img src="assets/icons/info-circle.svg" class="icon__menu" alt=""><a href=""
                         class="menu__item">Sobre</a></li>
-                <li class="icons"><img src="./assets/icons/calendar-date.svg" class="icon__menu" alt=""><a href=""
+                <li class="icons"><img src="assets/icons/calendar-date.svg" class="icon__menu" alt=""><a href=""
                         class="menu__item">Agenda</a></li>
-                <li class="icons"><img src="./assets/icons/telephone.svg" class="icon__menu" alt=""><a href=""
+                <li class="icons"><img src="assets/icons/telephone.svg" class="icon__menu" alt=""><a href=""
                         class="menu__item">Contato</a></li>
             </ul>
         </div>
@@ -123,7 +123,7 @@
     <button class="top-btn" style="color: #2874fc; font-size: 20px;"><i class="fa-solid fa-circle-chevron-up"></i></button>
 
     <div class="lista-tops">
-    <h1 id="text-test"></h1>
+    <h1 id="text-test">LISTA DOS TERRITÓRIOS</h1>
     </div>
 
     <section class="territorios">
@@ -219,7 +219,7 @@
     <footer>
         <div class="container-msg">
             <div class="img-left">
-                <img src="./assets/msg.svg" alt="" srcset="">
+                <img src="assets/msg.svg" alt="" srcset="">
             </div>
             <div class="form-msg">
                 <h1>Fale Conosco</h1>
@@ -239,7 +239,7 @@
 
         <div class="content-footer">
             <div class="content-footer-left">
-                <img src="./assets/logopmm.png">
+                <img src="assets/logopmm.png">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nostrum blanditiis eos earum,
                     consequatur ex!</p>
             </div>
@@ -247,8 +247,8 @@
                 <h1>ACOMPANHE</h1>
                 <div class="social-media">
                     <a href="https://www.instagram.com/prefeituramaranguape/"><img src="./assets/icons/icons8-instagram.svg" alt=""></a>
-                    <a href="#"><img src="./assets/icons/icons8-facebook-novo.svg" alt="" srcset=""></a>
-                    <a href="#"><img src="./assets/icons/icons8-reproduzir-youtube.svg" alt="" srcset=""></a>
+                    <a href="#"><img src="assets/icons/icons8-facebook-novo.svg" alt="" srcset=""></a>
+                    <a href="#"><img src="assets/icons/icons8-reproduzir-youtube.svg" alt="" srcset=""></a>
                 </div>
             </div>
         </div>
